--- a/Analog-clock/index.html
+++ b/Analog-clock/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analog Watch</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -29,6 +30,8 @@
                 <span class="hand second"></span>
             </div>
         </div>
+
+        <div class="mode-switch">Dark Mode</div>
     </div>
     
 </body>
